--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -29,6 +29,13 @@
     line-height: 36px;
     padding: 0 37px;
     margin-bottom: 80px;
+    margin-top: 69px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 16px;
+    padding: 0;
+    margin-bottom: 80px;
   }
 }
 
@@ -73,7 +80,7 @@
 
   @media (min-width: @desktop-width) {
     width: 75%;
-    margin-bottom: 86px;
+    margin-bottom: 82px;
   }
 }
 
@@ -89,14 +96,14 @@
     height: auto;
     align-items: baseline;
     border: 1px solid #cdcdcd;
-    padding: 26px 38px 28px 38px;
+    padding: 12px 38px 28px 38px;
     max-width: 100%;
   }
 
   @media (min-width: @desktop-width) {
     border: none;
     border-bottom: 1px solid #d9d9d9;
-    padding: 15px 0 17px 0;
+    padding: 17px 0 17px 0;
     align-items: baseline;
   }
 }
@@ -144,7 +151,7 @@
 
 .additional__item .card__title {
   padding: 0;
-  margin: 12px 0;
+  margin: 9px 0;
   max-width: 103px;
   min-width: 100px;
   text-align: start;
@@ -205,11 +212,17 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 20px;
+    gap: 50px;
+    justify-content: end;
+  }
+
+  @media (min-width: @desktop-width) {
+    gap: 111px;
   }
 }
 
 .additional-card__table {
-  margin-bottom: 12px;
+  margin-bottom: -3px;
 
   @media (min-width: @tablet-width) {
     width: 50%;
