--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -36,6 +36,7 @@
     max-width: 150px;
     text-align: center;
     margin: 0 auto;
+    margin-bottom: 12px;
   }
 }
 
@@ -70,7 +71,8 @@
     position: absolute;
     width: 161px;
     height: 172px;
-    top: -50px;
+    top: -57px;
+    right: -8%;
   }
 
   @media (min-width: @desktop-width) {
@@ -78,7 +80,21 @@
     width: 161px;
     height: 172px;
     left: -10px;
-    top: -50px;
+    top: -66px;
+  }
+}
+
+.card__image-500--micro {
+  @media (max-width: @mobile-width-only) {
+    height: 78px;
+    padding-top: 27px;
+  }
+}
+
+.card__image-500--last {
+  @media (max-width: @mobile-width-only) {
+    height: 84px;
+    padding-top: 22px;
   }
 }
 
@@ -90,16 +106,17 @@
   @media (min-width: @tablet-width) {
     position: absolute;
     width: 172px;
-    height: 196px;
-    top: -75px;
+    height: 206px;
+    top: -82px;
+    left: -16px;
   }
 
   @media (min-width: @desktop-width) {
     position: absolute;
     width: 172px;
     height: 196px;
-    left: -10px;
-    top: -75px;
+    left: -13px;
+    top: -91px;
   }
 }
 
@@ -117,20 +134,26 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 180px;
+    width: 165px;
   }
 }
 
 .card__detail {
   margin: 0;
   padding: 0;
+
+  @media (min-width: @desktop-width) {
+    margin-right: -55px;
+    text-align: start;
+    width: 41px;
+  }
 }
 
 .card__term {
   padding: 0;
 
-  @media (min-width: @tablet-width) {
-    width: 67%;
+  @media (min-width: @desktop-width) {
+    width: 131px;
   }
 }
 
@@ -151,6 +174,7 @@
   @media (min-width: @tablet-width) {
     top: 71px;
     left: 422px;
+    text-align: start;
   }
 
   @media (min-width: @desktop-width) {
