--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,5 +1,5 @@
 .catalog {
-  padding: 20px 20px 25px 20px;
+  padding: 19px 20px 27px 20px;
 
   @media (min-width: @tablet-width) {
     padding: 0 30px;
@@ -43,7 +43,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 73px 0 165px 110px;
+    margin: 73px 0 169px 110px;
     padding: 0;
   }
 }
@@ -55,6 +55,7 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 141px 10px;
   }
 
   @media (min-width: @desktop-width) {
@@ -70,7 +71,6 @@
 
   @media (min-width: @tablet-width) {
     border: none;
-    margin-bottom: 141px;
   }
 
   @media (min-width: @desktop-width) {
