--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -26,6 +26,16 @@
   }
 }
 
+.contacts__title--catalog {
+  @media (min-width: @tablet-width) {
+    padding-top: 7px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 0;
+  }
+}
+
 .contacts__address {
   font-family: "Lato", sans-serif;
   font-style: normal;
@@ -44,6 +54,7 @@
 
   @media (min-width: @desktop-width) {
     margin: 60px 80px 0 0;
+    text-align: start;
   }
 }
 
