--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -114,6 +114,7 @@
 
   @media (min-width: @desktop-width) {
     min-height: 374px;
+    width: 570px;
   }
 }
 
@@ -122,14 +123,14 @@
 }
 
 .programs__item-image--weight-loss {
-  top: 24px;
+  top: 21px;
   left: 22px;
   width: 50px;
   height: 53px;
 
   @media (min-width: @tablet-width) {
-    top: 81px;
-    right: 62px;
+    top: 80px;
+    right: 61px;
     left: auto;
     width: 200px;
     height: 211px;
@@ -145,7 +146,7 @@
 }
 
 .programs__item-image--weight-gain {
-  top: 27px;
+  top: 24px;
   left: 13px;
   width: 67px;
   height: 50px;
