--- a/source/less/blocks/card-more.less
+++ b/source/less/blocks/card-more.less
@@ -6,11 +6,13 @@
   line-height: 20px;
   text-transform: uppercase;
   color: #111111;
+  margin-bottom: -3px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 22px;
     width: 165px;
+    margin-bottom: 6px;
   }
 }
 
@@ -21,6 +23,7 @@
   font-size: 12px;
   line-height: 16px;
   color: #444444;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
@@ -35,6 +38,9 @@
   background-color: #f2f2f2;
   padding: 10px 0;
   width: 100%;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: -10px;
 }
 
 .card-more__plus {
@@ -45,11 +51,12 @@
   background-position: center;
   background-size: 100% 2px, 2px 100%;
   background-repeat: no-repeat;
+  margin-bottom: 10px;
 
   @media (min-width: @tablet-width) {
     width: 60px;
     height: 60px;
-    margin-bottom: 49px;
+    margin-bottom: 32px;
   }
 }
 
@@ -59,8 +66,12 @@
 }
 
 .card-more__wrapper {
-  padding: 38px;
+  padding: 7px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 54px 38px;
+  }
 }
