--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -61,6 +61,10 @@
 
 .form__group-list:last-child {
   margin-bottom: 24px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 69px;
+  }
 }
 
 .form__group-list {
@@ -89,6 +93,7 @@
   flex-wrap: nowrap;
   gap: 13px;
   align-items: center;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     gap: 20px;
@@ -110,12 +115,13 @@
 }
 
 .form__list-radio {
-  margin: 22px 0 19px 0;
+  margin: 25px 0 19px 0;
 
   @media (min-width: @tablet-width) {
     border: 1px solid #e7e7e7;
     padding: 30px;
     margin: 0;
+    margin-bottom: 41px;
   }
 }
 
@@ -126,10 +132,13 @@
   line-height: 18px;
   color: #222222;
   text-transform: uppercase;
+  position: relative;
+  padding-left: 45px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    padding-left: 58px;
   }
 }
 
@@ -146,33 +155,68 @@
   margin-left: -40px;
   margin-bottom: 35px;
   background: #ffffff;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-right: 38px;
+  }
 }
 
 .title-line--width {
   margin-right: 76px;
+  margin-top: 30px;
+
+  @media (min-width: @desktop-width) {
+    margin-top: 0;
+  }
+}
+
+.form__title-coment {
+  margin-top: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 72px;
+  }
+}
+
+.form__title-additionally {
+  margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 62px;
+  }
 }
 
 .form__title::after {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 27%;
   width: 100vw;
   height: 3px;
   margin-top: 2px;
   background: #68b738;
   z-index: -1;
+
+  @media (min-width: @tablet-width) {
+    top: 54%;
+  }
 }
 
 .form__title::before {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 27%;
   width: 100vw;
   height: 3px;
   margin-top: 2px;
   background: #68b738;
   z-index: -1;
   right: 0;
+
+  @media (min-width: @tablet-width) {
+    top: 54%;
+  }
 }
 
 .form__value-additionally {
@@ -193,7 +237,7 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
-    margin-top: 15px;
+    margin-top: 10px;
   }
 }
 
@@ -218,6 +262,10 @@
   display: flex;
   flex-direction: column;
 
+  @media (min-width: @tablet-width) {
+    margin-top: 37px;
+  }
+
   @media (min-width: @desktop-width) {
     flex-direction: row;
   }
@@ -230,13 +278,22 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 43px 64px;
   }
 
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 107px;
   }
+}
+
+.form__item:nth-child(2) {
+  margin-right: 32px;
+}
+
+.form__item:nth-child(3) {
+  margin-right: 92px;
 }
 
 .form__text {
@@ -246,8 +303,22 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  width: 100%;
-  height: 150px;
+  width: 90%;
+  height: 127px;
+  padding: 13px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    width: 96%;
+    height: 146px;
+    margin-bottom: 31px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 98%;
+    margin-bottom: 35px;
+  }
 }
 
 .form__button {
@@ -261,16 +332,16 @@
 }
 
 .form-button__wrapper {
-  margin-top: 40px;
+  margin-top: 34px;
   padding: 0 20px;
   display: flex;
   flex-direction: column;
-  gap: 21px;
+  gap: 14px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
     padding: 0;
-    margin: 59px 0 72px 71px;
+    margin: 59px 0 74px 71px;
     flex-direction: row;
     gap: 64px;
   }
@@ -282,9 +353,99 @@
 }
 
 .form-button__wrapper .button--primary {
-  width: 282px;
+
+  @media (max-width: @mobile-width-only) {
+    width: 282px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 16px 65px;
+  }
 
   @media (min-width: @desktop-width) {
     width: 568px;
+  }
+}
+
+.form__icon {
+  position: absolute;
+  right: 10px;
+
+  @media (min-width: @desktop-width) {
+    right: 19px;
+  }
+}
+
+.form__value.form__radio::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -4px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ededed;
+  border-radius: 50%;
+
+  @media (min-width: @tablet-width) {
+    width: 40px;
+    height: 40px;
+    top: -6px;
+  }
+}
+
+.form__value.form__radio::after {
+  content: "";
+  position: absolute;
+  left: 9px;
+  top: 6px;
+  display: none;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background-color: #68b738;
+
+  @media (min-width: @tablet-width) {
+    left: 12px;
+    top: 6px;
+    width: 18px;
+    height: 18px;
+  }
+}
+
+.form__input {
+  display: none;
+}
+
+.form__input:checked+.form__value::after {
+  display: block;
+}
+
+.form__input:checked+.form__value.form__checkbox::before {
+  background-image: url(../img/icon-check.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 70%;
+
+  @media (min-width: @tablet-width) {
+    background-size: 60%;
+  }
+}
+
+.form__value.form__checkbox::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -3px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ededed;
+
+  @media (min-width: @tablet-width) {
+    width: 40px;
+    height: 40px;
   }
 }
