--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -6,20 +6,24 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
-    justify-content: space-between;
-    padding: 55px 30px;
+    padding: 62px 29px 52px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 66px 110px;
+    padding: 65px 110px;
   }
 }
 
 .main-footer__logo {
-  margin: 40px 0 20px 0;
+  margin: 40px 0 0 0;
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    margin-right: 146px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 400px;
   }
 }
 
@@ -43,6 +47,14 @@
   display: flex;
   gap: 24px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 118px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 374px;
+  }
 }
 
 .main-footer__copyright {
@@ -56,7 +68,7 @@
 
 .main-footer__underline {
   display: block;
-  margin: 23px 20px 19px 20px;
+  margin: 13px 20px 19px 20px;
   height: 0;
   width: 87.5%;
   border: 1px solid #d9d9d9;
