--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -11,6 +11,14 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
+    font-size: 18px;
+    line-height: 24px;
+    gap: 93px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
   }
 }
 
@@ -72,6 +80,7 @@
 
 .main-header__logo-text {
   padding-top: 24px;
+  padding-right: 9px;
 
   @media (min-width: @tablet-width) {
     display: none;
