--- a/source/less/blocks/card-more.less
+++ b/source/less/blocks/card-more.less
@@ -41,6 +41,16 @@
   font-size: 16px;
   line-height: 20px;
   margin-bottom: -10px;
+
+  &:hover,
+  &:focus {
+    background-color: #ebebeb;
+  }
+
+  &:active {
+    color: rgb(68 68 68 / 30%);
+    background-color: #ebebeb;
+  }
 }
 
 .card-more__plus {
