--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -143,9 +143,8 @@
   padding: 0;
 
   @media (min-width: @desktop-width) {
-    margin-right: -55px;
-    text-align: start;
-    width: 41px;
+    text-align: end;
+    width: 60px;
   }
 }
 
