--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -49,6 +49,7 @@
   border: none;
   left: 43%;
   z-index: 1;
+  cursor: pointer;
 
   @media (min-width: @tablet-width) {
     background-image: url("../img/curtain-tablet.svg");
@@ -58,7 +59,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: -758px;
+    top: -522px;
     left: 920px;
   }
 }
@@ -75,8 +76,8 @@
     height: 512px;
   }
 
-  @media (min-width: @desktop-width)  {
-    top: -756px;
+  @media (min-width: @desktop-width) {
+    top: -522px;
     left: 659px;
   }
 }
@@ -84,6 +85,7 @@
 .example__slider__slim-cat {
   position: absolute;
   top: 0;
+  left: 0;
   width: 286px;
   height: 256px;
 
@@ -94,8 +96,8 @@
     left: 10%;
   }
 
-  @media (min-width: @desktop-width)  {
-    top: -756px;
+  @media (min-width: @desktop-width) {
+    top: -522px;
     left: 659px;
   }
 }
