--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -11,11 +11,21 @@
 
   @media (min-width: @desktop-width) {
     padding: 65px 110px;
+    justify-content: space-between;
   }
 }
 
 .main-footer__logo {
   margin: 40px 0 0 0;
+
+  &:hover,
+  &:focus-within {
+    opacity: 0.6;
+  }
+
+  &:disabled {
+    opacity: 0.3;
+  }
 
   @media (min-width: @tablet-width) {
     margin: 0;
