--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -93,6 +93,15 @@
   color: #000000;
   margin-left: 19px;
 
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
