--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,13 @@
 .social__link {
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    stroke: #68b738;
+  }
+
+  &:active {
+    stroke: #68b738;
+    opacity: 0.3;
+  }
 }
