--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -27,9 +27,23 @@
   line-height: 18px;
   color: #444444;
   text-transform: uppercase;
-  border: 1px solid #e7e7e7;
   padding: 14px 0 13px 20px;
   width: 100%;
+  border: none;
+  outline: 1px solid #e7e7e7;
+
+  &:hover {
+    outline: 1px solid #cdcdcd;
+  }
+
+  &:focus,
+  &:active {
+    outline: 2px solid #444444;
+  }
+
+  :invalid {
+    outline: 2px solid #ff8282;
+  }
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -353,7 +367,6 @@
 }
 
 .form-button__wrapper .button--primary {
-
   @media (max-width: @mobile-width-only) {
     width: 282px;
     font-size: 16px;
@@ -415,16 +428,12 @@
   }
 }
 
-.form__input {
-  display: none;
-}
-
-.form__input:checked+.form__value::after {
+.form__input:checked + .form__value::after {
   display: block;
 }
 
-.form__input:checked+.form__value.form__checkbox::before {
-  background-image: url(../img/icon-check.svg);
+.form__input:checked + .form__value.form__checkbox::before {
+  background-image: url("../img/icon-check.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 70%;
@@ -447,5 +456,27 @@
   @media (min-width: @tablet-width) {
     width: 40px;
     height: 40px;
+  }
+}
+
+.form__radio {
+  &:hover,
+  &:focus-within {
+    opacity: 0.6;
+  }
+
+  &:disabled {
+    opacity: 0.3;
+  }
+}
+
+.form__checkbox {
+  &:hover,
+  &:focus-within {
+    opacity: 0.6;
+  }
+
+  &:disabled {
+    opacity: 0.3;
   }
 }
