--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -13,7 +13,7 @@
 }
 
 .advantages__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -29,7 +29,7 @@
 }
 
 .advantages__description {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
