--- a/source/less/blocks/card-more.less
+++ b/source/less/blocks/card-more.less
@@ -1,5 +1,5 @@
 .card-more__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -17,7 +17,7 @@
 }
 
 .card-more__description {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
