--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -5,7 +5,7 @@
 }
 
 .contacts__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -37,7 +37,7 @@
 }
 
 .contacts__address {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
