--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,7 +1,7 @@
 .main-header {
   display: flex;
   flex-direction: column;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
