--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,5 +1,5 @@
 .promo {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   text-decoration: none;
   color: #ffffff;
   position: relative;
