--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -11,7 +11,7 @@
 }
 
 .additional__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
