--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -18,7 +18,7 @@
 }
 
 .card__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -41,7 +41,7 @@
 }
 
 .card__table {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
