--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -20,7 +20,7 @@
 }
 
 .form__field {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -242,7 +242,7 @@
 }
 
 .form__text-small {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
