--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -5,7 +5,7 @@
 .page__body {
   font-size: 14px;
   line-height: 18px;
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   margin: 0 auto;
   background-color: #ffffff;
   color: #000000;
@@ -25,7 +25,7 @@
 }
 
 .button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   box-sizing: border-box;
   border: none;
