--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,28 +1,3 @@
-.catalog {
-  padding: 19px 20px 27px 20px;
-
-  @media (min-width: @tablet-width) {
-    padding: 0 30px;
-  }
-
-  @media (min-width: @desktop-width) {
-    padding: 0;
-  }
-}
-
-.catalog:last-child {
-  @media (min-width: @tablet-width) {
-    border: 2px solid #f2f2f2;
-    padding: 0;
-    margin: 0 30px;
-    height: 427px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin: 0;
-  }
-}
-
 .catalog__title {
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
@@ -38,12 +13,12 @@
     font-size: 60px;
     line-height: 60px;
     border: none;
-    margin: 64px 0 118px 0;
+    margin: 64px 0 120px 0;
     padding-left: 30px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 73px 0 169px 110px;
+    margin: 77px 0 165px 110px;
     padding: 0;
   }
 }
@@ -51,17 +26,22 @@
 .catalog__wrapper {
   display: flex;
   flex-direction: column;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 141px 10px;
+    gap: 141px 60px;
+    padding: 0 30px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 80px;
     margin: 0 110px;
+    padding: 0;
   }
 }
 
@@ -75,16 +55,5 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 61px;
-  }
-}
-
-.catalog__card-wrapper {
-  display: flex;
-  flex-direction: row;
-
-  @media (min-width: @tablet-width) {
-    position: relative;
-    flex-direction: column;
-    align-items: center;
   }
 }
