--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -6,11 +6,11 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
-    padding: 62px 29px 52px;
+    padding: 59px 29px 52px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 65px 110px;
+    padding: 70px 110px 65px 110px;
     justify-content: space-between;
   }
 }
