--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -18,7 +18,7 @@
   line-height: 24px;
   margin: 0;
   margin-top: 25px;
-  padding-bottom: 36px;
+  padding-bottom: 35px;
   position: relative;
   background: #ffffff;
   width: 247px;
@@ -29,7 +29,7 @@
     line-height: 36px;
     padding: 0 37px;
     margin-bottom: 80px;
-    margin-top: 69px;
+    margin-top: 68px;
   }
 
   @media (min-width: @desktop-width) {
@@ -37,34 +37,47 @@
     padding: 0;
     margin-bottom: 80px;
   }
-}
 
-.additional__title::after {
-  content: "";
-  position: absolute;
-  top: 20%;
-  width: 100vw;
-  height: 3px;
-  margin-top: 2px;
-  background: #68b738;
-  z-index: -1;
-
-  @media (min-width: @tablet-width) {
-    top: 50%;
-  }
-}
-
-.additional__title::before {
-  @media (min-width: @tablet-width) {
-    content: "";
+  &::after,
+  &::before {
     position: absolute;
-    top: 50%;
-    width: 100vw;
-    height: 3px;
-    margin-top: 2px;
-    background: #68b738;
-    z-index: -1;
-    right: 0;
+    content: "";
+    background-color: #68b738;
+    height: 2px;
+  }
+
+  &::after {
+    @media (max-width: @mobile-width-only) {
+      width: 53px;
+      top: 25%;
+      right: -22%;
+    }
+
+    @media (min-width: @tablet-width) {
+      width: 328px;
+      top: 60%;
+      right: -79%;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 957px;
+      top: 64%;
+      right: -292%;
+    }
+  }
+
+  &::before {
+    @media (min-width: @tablet-width) {
+      width: 30px;
+      top: 60%;
+      left: -30px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 70px;
+      top: 60%;
+      left: -33%;
+    }
   }
 }
 
@@ -75,18 +88,19 @@
 
 .additional__list {
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 38px;
   padding: 0;
 
   @media (min-width: @desktop-width) {
-    width: 75%;
-    margin-bottom: 82px;
+    width: 74%;
+    margin-bottom: 86px;
   }
 }
 
 .additional__list .card {
   display: flex;
   flex-direction: column;
+  padding: 0;
 
   @media (min-width: @tablet-width) {
     background: none;
@@ -96,14 +110,14 @@
     height: auto;
     align-items: baseline;
     border: 1px solid #cdcdcd;
-    padding: 12px 38px 28px 38px;
+    padding: 11px 37px 26px 37px;
     max-width: 100%;
   }
 
   @media (min-width: @desktop-width) {
     border: none;
     border-bottom: 1px solid #d9d9d9;
-    padding: 17px 0 17px 0;
+    padding: 16px 0 14px 0;
     align-items: baseline;
   }
 }
@@ -111,6 +125,7 @@
 .additional__gift {
   border-bottom: none;
   background-image: url("../img/gift-background.png");
+  background-color: #68b738;
   width: 280px;
   height: 290px;
   position: relative;
@@ -138,20 +153,21 @@
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/gift-background.png");
-    width: 245px;
+    width: 247px;
     height: 289px;
     margin: 0;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/gift-background@2x.png");
-      background-size: 245px 289px;
+      background-size: 247px 289px;
     }
   }
 }
 
 .additional__item .card__title {
   padding: 0;
-  margin: 9px 0;
+  margin: 12px 0;
+  margin-bottom: 8px;
   max-width: 103px;
   min-width: 100px;
   text-align: start;
@@ -173,10 +189,12 @@
 
 .additional__item .card__order {
   position: relative;
-  margin-bottom: 19px;
+  margin: 0px;
+  margin-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     flex: 1;
+    padding: 10px 220px;
     margin: 0;
   }
 
@@ -187,9 +205,30 @@
 }
 
 .additional__item .card__table-item {
-  min-width: 275px;
-  margin-bottom: 14px;
+  margin-bottom: 13px;
   border: none;
+  font-size: 14px;
+  line-height: 14px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 12px;
+    font-size: 16px;
+    line-height: 20px;
+    min-width: 0;
+    gap: 51px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 285px;
+    margin: 0;
+    margin-left: 121px;
+  }
+}
+
+.additional__item .card__table-item-extra {
+  @media (min-width: @tablet-width) {
+    gap: 60px;
+  }
 }
 
 .additional__icon {
@@ -200,6 +239,10 @@
   @media (min-width: @tablet-width) {
     top: 57px;
     left: 77px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 84px;
   }
 }
 
@@ -217,7 +260,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    gap: 111px;
+    gap: 91px;
   }
 }
 
@@ -230,7 +273,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 33%;
+    width: 45%;
     margin: 0;
   }
 }
@@ -239,5 +282,32 @@
   @media (min-width: @desktop-width) {
     display: flex;
     gap: 80px;
+  }
+}
+
+.additional__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  width: 161px;
+  position: absolute;
+  top: 187px;
+  left: 58px;
+
+  @media (min-width: @tablet-width) {
+    top: 71px;
+    left: 422px;
+    text-align: start;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 185px;
+    left: 48px;
+    text-align: center;
   }
 }
