--- a/source/less/blocks/card-more.less
+++ b/source/less/blocks/card-more.less
@@ -6,7 +6,8 @@
   line-height: 20px;
   text-transform: uppercase;
   color: #111111;
-  margin-bottom: -3px;
+  margin-bottom: -4px;
+  margin-top: 14px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -73,15 +74,20 @@
 .card-more {
   text-align: center;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .card-more__wrapper {
-  padding: 7px;
+  padding: 24px 20px 34px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   @media (min-width: @tablet-width) {
-    padding: 54px 38px;
+    padding: 54px 38px 48px 38px;
+    border: 1px solid #d9d9d9;
   }
 }
