--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -19,6 +19,7 @@
     width: 172px;
     font-size: 20px;
     line-height: 26px;
+    padding-top: 4px;
   }
 
   @media (min-width: @desktop-width) {
@@ -53,12 +54,12 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 60px 80px 0 0;
+    margin: 55px 76px 0 0;
     text-align: start;
   }
 }
 
-.contacts__address--space {
+.contacts__address-space {
   @media (min-width: @tablet-width) {
     padding: 10px;
     display: block;
@@ -73,7 +74,7 @@
 
   @media (min-width: @tablet-width) {
     justify-content: space-between;
-    padding: 56px 70px;
+    padding: 56px 70px 59px;
   }
 
   @media (min-width: @desktop-width) {
@@ -97,14 +98,38 @@
   border: none;
   width: 100%;
   height: 362px;
+  background-image: url("../img/mobile-map@1x.png");
+  background-size: 320px 100%;
+  background-repeat: no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/mobile-map@2x.png");
+    background-size: 320px auto;
+  }
 
   @media (min-width: @tablet-width) {
     width: 100%;
     height: 400px;
+    background-image: url("../img/tablet-map@1x.png");
+    background-size: 768px 100%;
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/tablet-map@2x.png");
+      background-size: 768px auto;
+    }
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
     height: 400px;
+    background-image: url("../img/desktop-map@1x.png");
+    background-size: 1440px 100%;
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/desktop-map@2x.png");
+      background-size: 1440px auto;
+    }
   }
 }
