--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -6,7 +6,11 @@
   font-size: 16px;
   line-height: 19px;
   color: #444444;
-  padding-top: 10px;
+  padding-top: 6px;
+
+  @media (max-width: @mobile-width-only) {
+    padding-top: 11px;
+  }
 }
 
 
