--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -2,7 +2,7 @@
   font-family: "Oswald", "Arial", sans-serif;
 }
 
-.selection_title {
+.selection__title {
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -20,21 +20,21 @@
   }
 }
 
-.section_description {
+.selection__description {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
   margin: 0;
-  margin-bottom: 34px;
+  margin-bottom: 37px;
   margin-right: 30px;
   margin-left: 20px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    margin: 0 0 59px 70px;
+    margin: 0 0 64px 70px;
     max-width: 323px;
   }
 
