--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -189,7 +189,7 @@
 
 .additional__item .card__order {
   position: relative;
-  margin: 0px;
+  margin: 0;
   margin-bottom: 17px;
 
   @media (min-width: @tablet-width) {
