--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -17,12 +17,12 @@
 }
 
 .example::after {
-  content: '';
+  content: "";
   width: 1440px;
   height: 462px;
   position: absolute;
   background-color: #f2f2f2;
-  left: 0px;
+  left: 0;
   top: 1800px;
   z-index: -1;
 }
