--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -112,6 +112,7 @@
     border: 1px solid #cdcdcd;
     padding: 11px 37px 26px 37px;
     max-width: 100%;
+    min-height: 0;
   }
 
   @media (min-width: @desktop-width) {
