--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -91,7 +91,7 @@
 
 @media (min-width: @tablet-width) {
   .advantages__item-1 {
-    width: 230px;
+    min-width: 230px;
     background-image: url("../img/1.png");
     background-repeat: no-repeat;
     background-position: 125px 0;
@@ -102,21 +102,21 @@
   }
 
   .advantages__item-2 {
-    width: 246px;
+    min-width: 246px;
     background-image: url("../img/2.png");
     background-repeat: no-repeat;
     background-position: 125px 0;
   }
 
   .advantages__item-3 {
-    width: 247px;
+    min-width: 247px;
     background-image: url("../img/3.png");
     background-repeat: no-repeat;
     background-position: 125px 0;
   }
 
   .advantages__item-4 {
-    width: 249px;
+    min-width: 249px;
     background-image: url("../img/4.png");
     background-repeat: no-repeat;
     background-position: 125px 0;
