--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -7,14 +7,14 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: column;
-    height: 430px;
+    min-height: 430px;
     background: #f2f2f2;
     padding: 0 37px 0 39px;
     max-width: 324px;
   }
 
   @media (min-width: @desktop-width) {
-    height: 431px;
+    min-height: 431px;
     max-width: 245px;
   }
 }
