--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -30,7 +30,7 @@
   }
 }
 
-.main-header__catalog {
+.main-header-catalog {
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
