--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -17,14 +17,16 @@
 }
 
 .example::after {
-  content: "";
-  width: 1440px;
-  height: 462px;
-  position: absolute;
-  background-color: #f2f2f2;
-  left: 0;
-  top: 1800px;
-  z-index: -1;
+  @media (min-width: @desktop-width) {
+    content: "";
+    width: 1440px;
+    height: 462px;
+    position: absolute;
+    background-color: #f2f2f2;
+    left: 0;
+    top: 1800px;
+    z-index: -1;
+  }
 }
 
 .example-wrapper {
