--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -85,9 +85,16 @@
   }
 }
 
-.card__image-500--micro {
+.card__image-500--mini {
   @media (max-width: @mobile-width-only) {
     top: 28px;
+    left: 36px;
+  }
+}
+
+.card__image-500--micro {
+  @media (max-width: @mobile-width-only) {
+    top: 23px;
     left: 36px;
   }
 }
